--- a/polling/pom.xml
+++ b/polling/pom.xml
@@ -15,6 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<start-class>fyp.fms.FleetManagementSystemApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
