--- a/polling/src/main/resources/application.properties
+++ b/polling/src/main/resources/application.properties
@@ -2,11 +2,10 @@
 server.port= 5000
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url= jdbc:mysql://localhost:3306/polling_app?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url= jdbc:mysql://localhost:3306/polling_app?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
 spring.datasource.username= root
 spring.datasource.password=Qazwsx777.
-
-## Hibernate Properties
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
